--- a/frontend/src/pages/SignInPage/style.css
+++ b/frontend/src/pages/SignInPage/style.css
@@ -19,3 +19,14 @@
     font-size: 5rem;
 }
 
+.sign-in-button {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+}
