--- a/frontend/src/containers/Layout/Header/style.css
+++ b/frontend/src/containers/Layout/Header/style.css
@@ -4,3 +4,11 @@
     align-items: center;
     padding: 5px 20px;
   }
+.nav-button {
+  display: flex;
+  gap: 10px;
+}
+
+.fa-user {
+  margin-right: 5px;
+}
